Atualizando Tela de Recuperação de senha.

--- a/public/assets/css/password.css
+++ b/public/assets/css/password.css
@@ -7,119 +7,6 @@
     overflow: hidden;
 }
 
-.body-container {
-    font-family: 'Urbanist', Arial, sans-serif;
-    color: #333;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    min-height: 100vh;
-    margin: 0;
+.password-container {
+    background-color: #0E4548;
 }
-
-
-
-header .logo h1 {
-    font-size: 1.5rem;
-    color: #59907B;
-    font-weight: bold;
-}
-
-header nav ul {
-    list-style: none;
-    display: flex;
-    gap: 30px;
-}
-
-header nav ul li a {
-    text-decoration: none;
-    color: #333;
-    font-size: 1rem;
-    font-weight: 500;
-    transition: color 0.3s;
-}
-
-header nav ul li a:hover {
-    color: #59907B;
-}
-
-
-.container img{
-    margin-bottom: 20px;
-}
-
-#email {
-    color: #FFFF;
-}
-
-.container {
-    background-color: #59907B;
-    padding: 50px 20px;
-    border-radius: 12px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0; /* Remove margens automáticas da div */
-    margin-bottom: 30%;
-}
-
-.reset-password h2 {
-    color: #fff;
-    margin-bottom: 15px;
-    font-size: 1.5rem; /* Adjusted font size */
-    font-weight: 700;
-}
-
-.reset-password p {
-    color: #e8e8e8;
-    margin-bottom: 25px;
-    font-size: 0.9rem; /* Adjusted font size */
-    font-weight: 400;
-}
-
-.reset-password form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    width: 100%; /* Ensures form adjusts */
-}
-
-.reset-password form input {
-    padding: 10px; /* Adjusted padding */
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    font-size: 1rem;
-    background-color: #fff;
-    outline: none;
-    transition: border-color 0.3s;
-    color: black;
-}
-
-.reset-password form input:focus {
-    border-color: #000000;
-}
-
-.reset-password form button {
-    background-color: #1F5251;
-    color: #fff;
-    padding: 12px; /* Adjusted padding */
-    border: none;
-    border-radius: 8px;
-    font-size: 1rem;
-    cursor: pointer;
-    font-weight: 600;
-    transition: background-color 0.3s;
-}
-
-.reset-password .back-to-login {
-    margin-top: 20px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 0.9rem; /* Adjusted font size */
-    font-weight: 500;
-    transition: text-decoration 0.3s;
-}
-
