Alterações tela de recuperação de senha

--- a/public/assets/css/password.css
+++ b/public/assets/css/password.css
@@ -4,9 +4,95 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 .password-container {
+    position: absolute;
+    left: 20%;
     background-color: #0E4548;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    height: 600px;
+    width: 1000px;
+    flex-direction: row; /* ← Mude de column para row */
+    font-family: 'Urbanist', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.esq {
+    width: 37%;
+    text-align: center;
+}
+
+.dir {
+    padding-left: 35px;
+    width: 63%;
+    flex-direction: column;
+}
+
+.titulo {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espaço entre a imagem e o texto */
+}
+
+.butao {
+    display: flex;
+    align-items: center;            /* Centraliza verticalmente imagem + infos */
+    gap: 15px;                      /* Espaço entre a imagem e a div .infos */
+    border: 1px solid #fff;
+    width: 412px;
+    height: 80px;
+    border-radius: 10px;
+    background-color: #0E4548;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.img2 {
+    width: 33px;
+    height: 33px;
+}
+
+.infos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;       /* ← Garante que h2 e h4 fiquem centralizados verticalmente dentro da div */
+    align-items: flex-start;       /* ← Alinha os textos à esquerda */
+    color: #fff;
+}
+
+#h3texto {
+    font-size: 20px;
+    font-weight: 300;
+    padding-bottom: 40px;
+}
+
+.infos h2 {
+    font-size: 18px;
+    margin: 0;
+}
+
+.infos h4 {
+    font-size: 14px;
+    text-align: left;
+    margin: 0;
+    font-weight: 50;
+}
+
+.enviar {
+    background-color: #58917B;
+    color: white;
+    border: none;
+    height: 50px;
+    width: 200px;
+    border-radius: 15px;
+    font-size: 20px;
+    margin: auto 103px ;
+    margin-bottom: 130px;
 }
