--- a/public/assets/css/password.css
+++ b/public/assets/css/password.css
@@ -54,6 +54,11 @@
     margin-bottom: 20px;
 }
 
+.butao:hover {
+    background-color: #58917B;
+    transition: all 0.2s ease-in-out;
+}
+
 .img2 {
     width: 33px;
     height: 33px;
@@ -86,13 +91,21 @@
 }
 
 .enviar {
-    background-color: #58917B;
+    background-color: #0E4548;
     color: white;
     border: none;
     height: 50px;
     width: 200px;
+    border: 1px solid #fff;
     border-radius: 15px;
     font-size: 20px;
     margin: auto 103px ;
     margin-bottom: 130px;
+}
+
+.enviar:hover {
+    background-color: #58917B;
+    border: 1px solid #fff;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
 }
