--- a/public/assets/css/main_screen.css
+++ b/public/assets/css/main_screen.css
@@ -43,7 +43,7 @@ header {
     margin: 20px auto;
     margin-bottom: 50px;
     padding-left: 3%;
-    width: 60%; 
+    width: 67%; 
 }
 
 .search-bar > div {
@@ -123,6 +123,7 @@ header {
     color: black;
     width: 100%; /* Faz o link preencher a referência */
     height: 100%; /* Faz o link preencher a referência */
+    font-size: 15px;
 }
 
 .referencia:hover {
@@ -216,6 +217,7 @@ header {
     color: black;
     width: 100%;
     height: 100%;
+    font-size: 15px;
 }
 
 .distancia:hover {
@@ -290,6 +292,18 @@ input[type="range"]::-moz-range-thumb {
     height: 80px;
 }
 
+.tipo a {
+    display: flex; /* Garante que o link ocupe toda a área do botão */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none; /* Remove o sublinhado */
+    color: black;
+    width: 100%; /* Faz o link preencher a referência */
+    height: 100%; /* Faz o link preencher a referência */
+    font-size: 15px;
+}
+
 .tipo:hover {
     background-color: rgba(90, 145, 124, 0.7);
     align-items: center;  
@@ -305,6 +319,18 @@ input[type="range"]::-moz-range-thumb {
     border-radius: 35% / 55%;
     width: 140px;
     height: 80px;
+}
+
+.avaliacao a {
+    display: flex; /* Garante que o link ocupe toda a área do botão */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none; /* Remove o sublinhado */
+    color: black;
+    width: 100%; /* Faz o link preencher a referência */
+    height: 100%; /* Faz o link preencher a referência */
+    font-size: 15px;
 }
 
 .avaliacao:hover {
