--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -68,6 +68,11 @@
     padding: 6px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     border: 2px solid white;
+    cursor: pointer;
+  }
+  
+  .camera-icon:hover {
+    background-color: #a0a0a0;
   }
   
   .form-panel {
